# MIPT_Homework

./: .gitignore  README.md
Allocator/: a.out  fastallocator.h  fastallocator_test.cpp  main.cpp
BigInteger/BigInteger/: biginteger.h  main.cpp
BigInteger/BigInteger.xcodeproj/: project.pbxproj
BigInteger_2/BigInteger_2/: BigInteger.h  main.cpp
BigInteger_2/BigInteger_2.xcodeproj/: project.pbxproj
BigInteger_3/BigInteger_3/: biginteger.h  main.cpp
BigInteger_3/BigInteger_3.xcodeproj/: project.pbxproj
Deque/: main.cpp
Deque.xcodeproj/: project.pbxproj
Deque/Deque/: main.cpp
Deque/Deque.xcodeproj/: project.pbxproj
Exams/: README.md  advance_distance.cpp  array.cpp  biginteger.cpp  is_constructible.cpp  list.cpp  method_check.cpp  optional.cpp  shared_ptr.cpp  string.cpp  valarray.cpp
FFT/FFT/: main.cpp
FFT/FFT.xcodeproj/: project.pbxproj
Heaps/: CMakeLists.txt
Heaps/Heaps/: BinomialHeap.h  IHeap.h  LeftistHeap.h  SkewHeap.h  StlHeap.h  Testing.cpp  Testing.h  main.cpp
Heaps/tests/: test.txt
Matrix/Matrix/: BigInteger.cpp  BigInteger.hpp  Finite.cpp  Finite.hpp  Header.h  Matrix.cpp  Matrix.hpp  Rational.cpp  main.cpp
Next_permutation_on_subsegment/Next_permutation_on_subsegment/: main.cpp
Permutation/Permutation/: main.cpp  permutation.h
Permutation/Permutation.xcodeproj/: project.pbxproj
RationalNumbers/RationalNumbers/: Rational.hpp  main.cpp  rational.h
RationalNumbers/RationalNumbers.xcodeproj/: project.pbxproj
smart_pointers/smart_pointers/: a.out  main.cpp  smart_pointers.h
(+15 files in other folders)
